# gs-scraper

./: .gitattributes  .gitignore  404.html  CLAUDE.md  DATA_ARCHITECTURE.md  README.md  gap_dashboard.html  index.html  mkdocs.yml  pyproject.toml  run.ps1  run.sh
.github/: dependabot.yml
_quarantine/: manifest_2026-05-13.jsonl  manifest_finmind_bronze_2026-05-18.jsonl  manifest_rs_rating_2026-05-18.jsonl
changelog/: index.html
docs/: api-v1.md  duckdb-operations.md  gap_dashboard.html  migration-wsl-to-windows.md  progress-accounting-raw-extended.md  progress-agent-spec-2026-05-25.md  progress-apiprcd-valuation.md  progress-apistk1-capital-changes.md  progress-autogo-test-plans.md  progress-bulk-download.md  progress-chart-period-switch.md  progress-cleaning-criteria.md  progress-cleanup-97pct.md  progress-cleanup-raw-to-gold.md  progress-clear-stale-and-nav.md  progress-commit-msg-zh-spec.md  progress-completeness-and-comments.md  progress-cron-derived-rebuild.md  progress-daily-refresh-raw-wire.md  progress-dashboard-dark.md  progress-dashboard-sort-by-completeness.md  progress-dashboard-storage-layers.md  progress-data-arch-impl.md  progress-deferred-rescue.md  progress-derived-lock-immune.md  progress-docsite-deploy.md  progress-docsite.md  progress-downloads-zh.md  progress-duckdb-public-url.md  progress-extended-crawl-2026-05-25.md  progress-fetch-tej-rewrite.md  progress-finmind-cron.md  progress-finmind-rsrating-integration.md  progress-gap-dashboard-dark.md  progress-gap-dashboard-docsite.md  (+37 more)
docs-site/: changelog.md  gap_dashboard.html  index.md
(+199 files in other folders)
