[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qd_ingest"
version = "0.1.0"
description = "QUANTDATA ingest pipeline: bronze -> silver -> gold lakehouse"
requires-python = ">=3.11"
authors = [{ name = "kevin", email = "gsinvest017@gsinvest.com.tw" }]
dependencies = [
    "duckdb>=0.10.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "pandera>=0.18.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
ingest = ["yfinance>=0.2.30", "requests>=2.31", "feedparser>=6.0", "beautifulsoup4>=4.12"]
zipline = []  # zipline-tej installed via /home/kevin/gs-zipline-tej
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
qd-ingest = "qd_ingest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
